fix de navegacion mobile. Fix selector de personajes en informacion

--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,10 @@ header.info {
 
 /* MOBILE NAV*/
 
+.js--mobile-nav-icon {
+    display: none;
+}
+
 
 /* MAIN */
 
